글쓰기 페이지 CSS 추가
글쓰기 페이지 CSS 디자인 추가

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="menu-bar">
         <div class="menu-bar__location">
-          <div>역삼1동</div>
+          <div>장위동</div>
           <div class="menu-bar__location-icon">
             <img src="assets/arrow-down.svg" alt="" />
           </div>
